Wed Dec  7 00:01:59 1994    <tytso@rsx-11.mit.edu>

	* configure.in: Add check for HAS_SETSID test for daemon.c

Sat Jul 16 01:24:01 1994  Tom Yu  (tlyu at dragons-lair)

	* daemon.c: <fcntl.h>, not <sys/fcntl.h>

Tue Jun 21 00:52:24 1994  Mark W. Eichin  (eichin at mit.edu)

	* configure.in: add AC_CONST for v*printf.

Mon Jun 20 19:37:38 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* memmove.c: #include <krb5/config.h> so that build works using imake.
