@@ -32,6 +32,7 @@
  */
 
 #include <fcntl.h>
+#include <sys/types.h>
 #include <sys/file.h>
 #include <unistd.h>
 #ifdef HAS_PATHS_H
