@@ -1,3 +1,11 @@
+Thu Dec 22 16:33:02 1994  Theodore Y. Ts'o  (tytso@dcl)
+
+	* configure.in: 
+	* strcasecmp.c: Add strcasecmp replacement if necessary.
+
+	* daemon.c:
+	* memmove.c: Add #include for <sys/types.h>
+
 Wed Dec  7 00:01:59 1994    <tytso@rsx-11.mit.edu>
 
 	* configure.in: Add check for HAS_SETSID test for daemon.c
